# renderer

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Settings-windows.cap  Settings.cap  TODO.md  amd_alloc.cc  build.rs  debugging.sln  make.bat  rustfmt.toml  wrapper.h
.cargo/: config.toml
benches/: component_storage.rs
benchmarks/: algebra.rs
macro_lib/: Cargo.toml  inputs.rs  keywords.rs  macrolib.rs  resource_claims.rs  rga.rs
macros/: Cargo.toml  inputs.rs  keywords.rs  macros.rs  parsed.rs  rga.rs
ogl/: Cargo.toml  basic.frag  basic.vert  ogl.rs
shaders/: generate_work.comp  gltf_mesh.frag  gltf_mesh.vert  simple_color.frag  simple_color.geom  simple_color.vert  triangle.frag  triangle.vert
src/: ecs.rs  main.rs  renderer.rs  v4.rs
src/ecs/: camera_controller.rs  components.rs  custom.rs  input.rs  resources.rs  systems.rs
src/forward_renderer/: alloc.rs  components.rs  device.rs  ecs.rs  helpers.rs  instance.rs  mod.rs  renderer.rs  swapchain.rs  systems.rs
src/forward_renderer/ecs/: components.rs  systems.rs
src/forward_renderer/renderer/: alloc.rs  commands.rs  device.rs  entry.rs  gltf_mesh.rs  helpers.rs  instance.rs  swapchain.rs
src/forward_renderer/renderer/device/: buffer.rs  commands.rs  descriptors.rs  double_buffered.rs  image.rs  mapping.rs  sync.rs
src/forward_renderer/renderer/systems/: consolidate_mesh_buffers.rs  consolidate_vertex_buffers.rs  cull_pipeline.rs  mod.rs  present.rs  textures.rs
src/lib/: alloc.rs  buffer.rs  command_buffer.rs  device.rs  entry.rs  helpers.rs  instance.rs  mod.rs  render_dag.rs  swapchain.rs  texture.rs
src/lib/buffer/: mod.rs
src/lib/command_buffer/: mod.rs
src/lib/ecs/: components.rs  mod.rs  systems.rs
src/lib/ecs/render_dag/: mod.rs
src/lib/graphics_pipeline/: mod.rs  textured_mesh.rs
src/lib/mesh/: mod.rs  simple_color.rs  triangle.rs
src/lib/render_dag/: mod.rs  v1.rs  v2.rs
src/lib/render_dag/v3/: alloc.rs  dot_formatter.rs  expanded.rs  macros.rs  mod.rs  surface.rs  test.rs  util.rs
src/lib/renderpass/: mod.rs  simple_color.rs
src/lib/texture/: mod.rs
src/renderer/: alloc.rs  device.rs  entry.rs  gltf_mesh.rs  gltf_mesh_io.rs  helpers.rs  instance.rs  shaders.rs  swapchain.rs  systems.rs
src/renderer/device/: alloc.rs  buffer.rs  commands.rs  descriptors.rs  double_buffered.rs  framebuffer.rs  image.rs  image_view.rs  mapping.rs  pipeline.rs  sampler.rs  shader.rs  sync.rs
src/renderer/helpers/: command_util.rs
src/renderer/systems/: acceleration_strucures.rs  consolidate_mesh_buffers.rs  crash_debugging.rs  cull_pipeline.rs  debug_aabb_renderer.rs  depth_pass.rs  present.rs  reference_raytracer.rs  scene_loader.rs  shader_reload.rs  shadow_mapping.rs  textures.rs
src/shaders/: compact_draw_stream.comp  debug_aabb.frag  debug_aabb.vert  depth_pipe.vert  depth_prepass.vert  generate_work.comp  gltf_mesh.frag  gltf_mesh.vert  gui.frag  gui.vert  imgui_pipe.frag  imgui_pipe.vert  reference_rt.comp  reset_indices.comp  test.comp  triangle.frag  triangle.vert
src/shaders/helpers/: helper.glsl
vma/: Cargo.toml  amd_alloc.cc  build.rs  wrapper.h
vma/src/: lib.rs
