[package]
name = "renderer"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[[bin]]
name = "renderer"
bench = false

[[bench]]
name = "algebra"
path = "benchmarks/algebra.rs"
harness = false

[dependencies]
ash = "0.31.0"
bevy_ecs = { path = "./vendor/bevy/crates/bevy_ecs" } #  "0.1.3"
bevy_tasks = { path = "./vendor/bevy/crates/bevy_tasks" }
env_logger = "0.7.1"
parking_lot = "0.11.0"
gltf = "0.15.0"
hashbrown = "0.9.0"
humansize = "1.1.0"
image = "0.23"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
memoffset = "0.5.4"
lazy_static = "1.4.0"
meshopt = "0.1.3"
microprofile = { version = "0.2.0", optional = true }
nalgebra = "0.22.0"
nalgebra-glm = "0.8.0"
ncollide3d = "0.24.0"
num-traits = "0.2.6"
rayon = "1.1.0"
simba = "0.2.0"
smallvec = "1.2.0"
spirq = "0.4.6"
spirv_headers = "1.3.4"
spirv-reflect = "0.2.1"
winit = "0.22.0"

[patch.crates-io]
simba = { git = "https://github.com/dimforge/simba" }

[build-dependencies]
bindgen = "0.55.0"
jobserver = "0.1.21"
rayon = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.5"

[features]
default = ["simba/packed_simd"]
vk_names = []
standard_validation = ["vk_names"]
sync_validation = ["standard_validation"]
uncapped = []
profiling = ["uncapped", "microprofile"]

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.adler32]
opt-level = 3

[profile.dev.package.simba]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

[profile.dev]
opt-level = 1
lto = "off"

[profile.release]
lto = "thin"
