cargo-features = ["named-profiles"]

[package]
name = "renderer"
version = "0.1.0"
build = "build.rs"
edition = "2018"
resolver = "2"

[[bin]]
name = "renderer"
bench = false

# [[bench]]
# name = "algebra"
# path = "benchmarks/algebra.rs"
# harness = false

[dependencies]
renderer-macros = { path = "macros" }
renderer-vma = { path = "vma" }
ash = "0.32.0"
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
bevy_log = "0.5.0"
bevy_tasks = "0.5.0"
env_logger = "0.8.2"
parking_lot = "0.11.0"
gltf = "0.15.0"
hashbrown = "0.11.2"
humansize = "1.1.0"
image = "0.23"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
intel_tex = { version = "0.1.4", optional = true }
meshopt = "0.1.9"
microprofile = "0.2.0"
nalgebra = "0.26.1"
nalgebra-glm = "0.12.0"
ncollide3d = "0.29.0"
notify = { version = "4.0.16", optional = true }
num-traits = "0.2.6"
simba = "0.4.0"
smallvec = "1.2.0"
spirq = { version = "0.4.6", optional = true }
static_assertions= "1.1.0"
winit = "0.24.0"

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0"
jobserver = "0.1.21"
rayon = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.5"

[features]
default = ["simba/packed_simd", "smallvec/const_generics"]
compress_textures = ["intel_tex"]
vk_names = []
crash_debugging = []
standard_validation = ["vk_names"]
gpu_validation = ["standard_validation"]
gpu_printf = ["standard_validation"]
silence_validation = ["standard_validation"]
sync_validation = ["crash_debugging", "standard_validation"]
uncapped = []
no_profiling = ["microprofile/disabled"]
profiling_bevy = ["bevy_ecs/trace", "bevy_log/tracing-chrome"]
shader_reload = ["notify", "spirq"]

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.intel_tex]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.adler32]
opt-level = 3

[profile.dev.package.simba]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

[profile.dev.package.nalgebra-glm]
opt-level = 3

[profile.dev.package.ncollide3d]
opt-level = 3

[profile.dev]
opt-level = 1
debug = false # to speedup incremental compilaton, uncomment to use a debugger
lto = "off"

[profile.release]
lto = "thin"

[profile.rel_with_deb_info]
inherits = "release"
debug = true
