cargo-features = ["named-profiles"]

[workspace]
members = [".", "vma", "macros", "macro_lib"]

[package]
name = "renderer"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[[bin]]
name = "renderer9"
path = "src/main.rs"
bench = false

# [[bench]]
# name = "algebra"
# path = "benchmarks/algebra.rs"
# harness = false

[dependencies]
renderer-macro-lib = { path = "macro_lib" }
renderer-macros = { path = "macros" }
renderer-vma = { path = "vma" }
anyhow = "1.0.44"
arrayvec = "0.7.1"
ash = "0.36.0"
bincode = "1.3.3"
bevy_app = "0.6.0"
bevy_ecs = "0.6.0"
bevy_log = "0.6.0"
bevy_tasks = "0.6.0"
bevy_system_graph = "0.1.1"
cache-padded = "1.1.1"
crossbeam-utils = "0.8.5"
parking_lot = { version = "0.12.0", features = ["deadlock_detection"] }
futures-lite = "1.12.0"
gltf = { version = "1.0", features = ["KHR_materials_pbrSpecularGlossiness"] }
hashbrown = "0.12.0"
humansize = "1.1.0"
image = "0.24"
imgui = "0.8.0"
imgui-winit-support = { version = "0.8.0", default-features = false, features = ["winit-26"] }
indexmap = "1.7.0"
intel_tex = { version = "0.1.4", optional = true }
itertools = "0.10"
lazy_static = "1.4"
libmimalloc-sys = { git = "https://github.com/BlackDex/mimalloc_rust", branch = "add-dev-repo-support", default-features = false, features = ["v2_dev", "extended"] }
log = "0.4.14"
meshopt = "0.1.9"
mimalloc = { git = "https://github.com/BlackDex/mimalloc_rust", branch = "add-dev-repo-support", default-features = false, features = ["v2_dev", "debug_in_debug"] }
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
ncollide3d = "0.32.0"
notify = { version = "4.0.16", optional = true }
num-traits = "0.2.6"
petgraph = "0.6.0"
profiling = "1.0"
rand = "0.8.4"
scopeguard = "1.1.0"
simba = "0.6.0"
smallvec = { version = "1.2.0", features = ["union", "const_generics", "const_new", "specialization"] }
spirq = { version = "0.5.0", optional = true }
static_assertions= "1.1.0"
# tokio = { version = "1", features = ["full", "parking_lot"] }
tracy-client = { version = "0.12", default-features = false, optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tracing-tracy = { version = "0.8", default-features = false, optional = true }
winit = "0.26.0"

[build-dependencies]
renderer-macro-lib = { path = "macro_lib" }
bindgen = "0.59.1"
cc = "1.0"
indexmap = "1.7.0"
itertools = "0.10"
jobserver = "0.1.21"
rayon = "1.1.0"
serde = { version = "1.0", features = ["derive"] } 

[dev-dependencies]
criterion = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.5"

[features]
default = ["simba/packed_simd", "smallvec/const_generics"]
collapse_compute = []
collapse_transfer = []
compress_textures = ["intel_tex"]
vk_names = []
crash_debugging = []
standard_validation = ["vk_names"]
gpu_validation = ["standard_validation"]
gpu_printf = ["standard_validation"]
nsight_profiling = ["collapse_compute", "vk_names"]
silence_validation = ["standard_validation"]
sync_validation = ["standard_validation"]
uncapped = []
trace_alloc = []
tracing_on = ["profiling/profile-with-tracy", "tracing-tracy/enable", "tracy-client/enable", "bevy_ecs/trace"]
tracing_off = ["tracing/max_level_off", "tracing/release_max_level_off"]
shader_reload = ["notify", "spirq"]
submit_ooo = []

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.intel_tex]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.adler32]
opt-level = 3

[profile.dev.package.simba]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[profile.dev]
opt-level = 1
debug = true # to speedup incremental compilaton, uncomment to use a debugger
panic = "abort"
lto = "off"

[profile.release]
lto = "thin"
panic = "abort"

[profile.rel_with_deb_info]
inherits = "release"
debug = true
