[package]
name = "renderer-macro-lib"
version = "0.1.0"
edition =  "2021"

[lib]
path = "macrolib.rs"

[dependencies]
anyhow = "1.0.44"
ash = { git = "https://github.com/MaikKlein/ash", rev = "ed351996e57006f3984f634cc8a10988a3220041" } # version = "0.32.0"
bincode = "1.3.3"
convert_case = "0.4.0"
derive_more = "0.99.13"
derive-syn-parse = "0.1.5"
glob = "0.3.0"
hashbrown = { version = "0.11.2", features = ["serde"] }
itertools = "0.10"
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spirq = { git = "https://github.com/PENGUINLIONG/spirq-rs", branch = "dev" }
syn = { version = "1.0", features = ["visit", "full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
