[package]
name = "renderer-macro-lib"
version = "0.1.0"
edition =  "2021"

[lib]
path = "macrolib.rs"

[dependencies]
anyhow = "1.0.44"
ash = "0.36.0"
bincode = "1.3.3"
convert_case = "0.5.0"
derive_more = "0.99.13"
derive-syn-parse = "0.1.5"
glob = "0.3.0"
hashbrown = { version = "0.12.0", features = ["serde"] }
indexmap = "1.7.0"
itertools = "0.10"
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spirq = "0.5.0"
syn = { version = "1.0", features = ["visit", "full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
