[package]
name = "renderer-macros"
version = "0.1.0"
edition =  "2018"
resolver = "2"

[lib]
proc-macro = true
path = "macros.rs"

[dependencies]
ash = { git = "https://github.com/MaikKlein/ash" } # version = "0.32.0"
convert_case = "0.4.0"
derive_more = "0.99.13"
derive-syn-parse = "0.1.5"
hashbrown = "0.11.2"
indoc = "1.0"
itertools = "0.10"
quote = "1.0"
petgraph = "0.6.0"
pretty_assertions = "0.7.2"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spirq = "0.4.6"
syn = "1.0"
