[package]
name = "renderer-macros"
version = "0.1.0"
edition =  "2021"

[lib]
proc-macro = true
path = "macros.rs"

[dependencies]
renderer-macro-lib = { path = "../macro_lib" }
ash = "0.36.0"
bincode = "1.3.3"
convert_case = "0.4.0"
derive_more = "0.99.13"
derive-syn-parse = "0.1.5"
hashbrown = "0.11.2"
indoc = "1.0"
itertools = "0.10"
quote = "1.0"
petgraph = { version = "0.6.0", features = ["serde-1"] }
pretty_assertions = "0.7.2"
proc-macro2 = "1.0"
proc-macro-error = "1"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["visit", "extra-traits"] }
