[package]
name = "Renderer ogl"
version = "0.1.0"

[dependencies]
cgmath = "^0.16"
gl = "0.9.0"
glfw = "0.20.0"
gltf = "0.10.1"
gltf-json = "0.10.1"
gltf-importer = "0.10.1"
gltf-utils = "0.10.1"
image = "^0.18"
winit = "^0.10"
specs = "^0.10"
specs-derive = "^0.1"
time = "^0.1"

[[bin]]
name = "ogl"
path = "ogl.rs"